--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- CSS personalizado -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <section id="team" class="section bg-gray-100">
@@ -22,7 +22,7 @@
             <div class="row custom-row">
                 <!-- Libros -->
                 <div class="col-lg-3 col-sm-6 my-3 wow fadeInUp " data-wow-duration="0.3s" data-wow-delay="0.3s" style="visibility: visible; animation-duration: 0.3s; animation-delay: 0.3s; animation-name: fadeInUp;">
-                    <a href="indexLibros.html">
+                    <a href="/libro">
                         <div class="hover-top-in text-center">
                             <div class="overflow-hidden z-index-1 position-relative px-5 hover-top--in"><img class="rounded-circle border border-5 border-white shadow" src="https://w7.pngwing.com/pngs/740/46/png-transparent-digital-library-community-glass-rectangle-bookcase-thumbnail.png" title="" alt=""></div>
                             <div class="mx-2 mx-xl-3 shadow rounded-3 position-relative mt-n4 bg-white p-4 pt-6 mx-4 text-center hover-top--in custom-card">
