--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,7 +35,7 @@
                 <div class="col-lg-3 col-sm-6 my-3 wow fadeInUp" data-wow-duration="0.3s" data-wow-delay="0.3s" style="visibility: visible; animation-duration: 0.3s; animation-delay: 0.3s; animation-name: fadeInUp;">
                     <a href="/pelicula">
                         <div class="hover-top-in text-center">
-                            <div class="overflow-hidden z-index-1 position-relative px-5 hover-top--in"><img class="rounded-circle border border-5 border-white shadow" src="https://e7.pngegg.com/pngimages/229/405/png-clipart-art-film-clapperboard-cinema-movie-theatre-miscellaneous-text-thumbnail.png" title="" alt=""></div>
+                            <div class="overflow-hidden z-index-1 position-relative px-5 hover-top--in"><img class="rounded-circle border border-5 border-white shadow" src="https://img.freepik.com/premium-vector/movie-time_579077-259.jpg?semt=ais_hybrid&w=740" title="" alt=""></div>
                             <div class="mx-2 mx-xl-3 shadow rounded-3 position-relative mt-n4 bg-white p-4 pt-6 mx-4 text-center hover-top--in">
                                 <h6 class="fw-700 dark-color mb-1">Peliculas</h6><small>Gestor de peliculas</small>
                             </div>
@@ -46,7 +46,7 @@
                 <div class="col-lg-3 col-sm-6 my-3 wow fadeInUp" data-wow-duration="0.3s" data-wow-delay="0.3s" style="visibility: visible; animation-duration: 0.3s; animation-delay: 0.3s; animation-name: fadeInUp;">
                     <a href="/serie">
                         <div class="hover-top-in text-center">
-                            <div class="overflow-hidden z-index-1 position-relative px-5 hover-top--in"><img class="rounded-circle border border-5 border-white shadow" src="https://png.pngtree.com/png-clipart/20210619/ourmid/pngtree-family-kids-watching-tv-series-illustration-png-image_3467842.jpg" title="" alt=""></div>
+                            <div class="overflow-hidden z-index-1 position-relative px-5 hover-top--in"><img class="rounded-circle border border-5 border-white shadow" src="https://img.freepik.com/vector-premium/programa-television-texto-estilo-letrero-neon_44523-738.jpg" title="" alt=""></div>
                             <div class="mx-2 mx-xl-3 shadow rounded-3 position-relative mt-n4 bg-white p-4 pt-6 mx-4 text-center hover-top--in">
                                 <h6 class="fw-700 dark-color mb-1">Series</h6><small>Gestor de series</small>
                             </div>
@@ -57,7 +57,7 @@
                 <div class="col-lg-3 col-sm-6 my-3 wow fadeInUp" data-wow-duration="0.3s" data-wow-delay="0.4s" style="visibility: visible; animation-duration: 0.3s; animation-delay: 0.4s; animation-name: fadeInUp;">
                     <a href="/videojuego">
                         <div class="hover-top-in text-center">
-                            <div class="overflow-hidden z-index-1 position-relative px-5 hover-top--in"><img class="rounded-circle border border-5 border-white shadow" src="https://w7.pngwing.com/pngs/961/904/png-transparent-emoji-video-game-sms-games-game-sticker-joystick-thumbnail.png" title="" alt=""></div>
+                            <div class="overflow-hidden z-index-1 position-relative px-5 hover-top--in"><img class="rounded-circle border border-5 border-white shadow" src="https://img.freepik.com/vector-gratis/conjunto-elementos-entretenimiento-videojuegos_1284-45758.jpg?semt=ais_hybrid&w=740&q=80" title="" alt=""></div>
                             <div class="mx-2 mx-xl-3 shadow rounded-3 position-relative mt-n4 bg-white p-4 pt-6 mx-4 text-center hover-top--in">
                                 <h6 class="fw-700 dark-color mb-1">Videojuegos</h6><small>Gestor de videojuegos</small>
                             </div>
