--- a/src/main/resources/templates/indexSeries.html
+++ b/src/main/resources/templates/indexSeries.html
@@ -15,11 +15,14 @@
         <div class="container-fluid">
             <div class="row section-heading justify-content-center text-center wow fadeInUp" data-wow-duration="0.3s" data-wow-delay="0.3s" style="visibility: visible; animation-duration: 0.3s; animation-delay: 0.3s; animation-name: fadeInUp;">
                 <div class="col-lg-8 col-xl-6">
-                    <h3 class="h1 bg-primary-after after-50px pb-3 mb-3">Tracker de series</h3>
-                    <div class="lead">Web en construcción!!</div>
+                    <h3 class="h1 bg-primary-after after-50px pb-3 mb-3 mt-5">
+                        <img src="https://cdn-icons-png.flaticon.com/512/6209/6209965.png" class="avatar sm rounded-pill flex-shrink-0" alt="serie">
+                        Tracker de series
+                        <img src="https://cdn-icons-png.flaticon.com/512/6209/6209965.png" class="avatar sm rounded-pill flex-shrink-0" alt="serie">
+                    </h3>
                 </div>
             </div>
-            <div class="row custom-row">
+            <div class="">
                 <div class="col-12 mb-3 mb-lg-5">
                     <div class="d-flex justify-content-center my-3">
                         <div class="input-group w-auto" style="min-width: 500px;">
