--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,12 +11,11 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <section id="team" class="section bg-gray-100">
+    <section id="team" class="section bg-gray-100 mt-5">
         <div class="container">
             <div class="row section-heading justify-content-center text-center wow fadeInUp" data-wow-duration="0.3s" data-wow-delay="0.3s" style="visibility: visible; animation-duration: 0.3s; animation-delay: 0.3s; animation-name: fadeInUp;">
                 <div class="col-lg-8 col-xl-6">
                     <h3 class="h1 bg-primary-after after-50px pb-3 mb-3">Media Tracker</h3>
-                    <div class="lead">Web en construcción!!</div>
                 </div>
             </div>
             <div class="row custom-row">
