--- a/src/main/resources/templates/indexLibros.html
+++ b/src/main/resources/templates/indexLibros.html
@@ -15,11 +15,16 @@
         <div class="container-fluid">
             <div class="row section-heading justify-content-center text-center wow fadeInUp" data-wow-duration="0.3s" data-wow-delay="0.3s" style="visibility: visible; animation-duration: 0.3s; animation-delay: 0.3s; animation-name: fadeInUp;">
                 <div class="col-lg-8 col-xl-6">
-                    <h3 class="h1 bg-primary-after after-50px pb-3 mb-3">Tracker de libros</h3>
-                    <div class="lead">Web en construcción!!</div>
+                    <h3 class="h1 bg-primary-after after-50px pb-3 mb-3 mt-5">
+                        <img src="https://images.vexels.com/media/users/3/242555/isolated/preview/3236dda9ad7dc9905f870dae152ca56a-elementos-de-pegatinas-de-regreso-a-la-escuela-9.png" 
+                             class="avatar sm rounded-pill flex-shrink-0" alt="Libro">
+                        Tracker de libros
+                        <img src="https://images.vexels.com/media/users/3/242555/isolated/preview/3236dda9ad7dc9905f870dae152ca56a-elementos-de-pegatinas-de-regreso-a-la-escuela-9.png" 
+                             class="avatar sm rounded-pill flex-shrink-0" alt="Libro">
+                    </h3>
                 </div>
             </div>
-            <div class="row custom-row">
+            <div class="">
                 <div class="col-12 mb-3 mb-lg-5">
                     <div class="d-flex justify-content-center my-3">
                         <div class="input-group w-auto" style="min-width: 500px;">
