--- a/src/main/resources/templates/indexPeliculas.html
+++ b/src/main/resources/templates/indexPeliculas.html
@@ -15,12 +15,15 @@
         <div class="container-fluid">
             <div class="row section-heading justify-content-center text-center wow fadeInUp" data-wow-duration="0.3s" data-wow-delay="0.3s" style="visibility: visible; animation-duration: 0.3s; animation-delay: 0.3s; animation-name: fadeInUp;">
                 <div class="col-lg-8 col-xl-6">
-                    <h3 class="h1 bg-primary-after after-50px pb-3 mb-3">Tracker de peliculas</h3>
-                    <div class="lead">Web en construcción!!</div>
+                    <h3 class="h1 bg-primary-after after-50px pb-3 mb-3 mt-5">
+                        <img src="https://png.pngtree.com/element_pic/16/11/18/4f829e85866bd52d062ca58b4e1ecef5.png" class="avatar sm rounded-pill flex-shrink-0" alt="pelicula">
+                        Tracker de peliculas
+                        <img src="https://png.pngtree.com/element_pic/16/11/18/4f829e85866bd52d062ca58b4e1ecef5.png" class="avatar sm rounded-pill flex-shrink-0" alt="pelicula">
+                    </h3>
                 </div>
             </div>
-            <div class="row custom-row">
-                <div class="col-12 mb-3 mb-lg-5">
+            <div class="">
+                <div class="col-12 mb-3 mb-lg-5 mt-n5">
                     <div class="d-flex justify-content-center my-3">
                         <div class="input-group w-auto" style="min-width: 500px;">
                             <select class="form-select" id="tipoFiltro">
