--- a/src/main/resources/templates/indexPeliculas.html
+++ b/src/main/resources/templates/indexPeliculas.html
@@ -17,7 +17,7 @@
                 <div class="col-lg-8 col-xl-6">
                     <h3 class="h1 bg-primary-after after-50px pb-3 mb-3 mt-5">
                         <img src="https://png.pngtree.com/element_pic/16/11/18/4f829e85866bd52d062ca58b4e1ecef5.png" class="avatar sm rounded-pill flex-shrink-0" alt="pelicula">
-                        Tracker de peliculas
+                        Tracker de películas
                         <img src="https://png.pngtree.com/element_pic/16/11/18/4f829e85866bd52d062ca58b4e1ecef5.png" class="avatar sm rounded-pill flex-shrink-0" alt="pelicula">
                     </h3>
                 </div>
@@ -39,7 +39,7 @@
                     </div>
                     <div class="overflow-hidden card table-nowrap table-card">
                         <div class="card-header d-flex justify-content-between align-items-center">
-                            <h5 class="mb-0">Mis peliculas</h5>
+                            <h5 class="mb-0">Mis películas</h5>
                             <button class="btn btn-success btnRegistro" onclick="activarRegistro()"><i class="bi bi-plus-square"></i></button>
                         </div>
                         <div class="table-responsive">
