--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,7 +36,7 @@
                         <div class="hover-top-in text-center">
                             <div class="overflow-hidden z-index-1 position-relative px-5 hover-top--in"><img class="rounded-circle border border-5 border-white shadow" src="https://img.freepik.com/premium-vector/movie-time_579077-259.jpg?semt=ais_hybrid&w=740" title="" alt=""></div>
                             <div class="mx-2 mx-xl-3 shadow rounded-3 position-relative mt-n4 bg-white p-4 pt-6 mx-4 text-center hover-top--in">
-                                <h6 class="fw-700 dark-color mb-1">Peliculas</h6><small>Gestor de peliculas</small>
+                                <h6 class="fw-700 dark-color mb-1">Películas</h6><small>Gestor de películas</small>
                             </div>
                         </div>
                     </a>
